Add missing VERSION build argument in Travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ after_success:
       echo "Deploy with version $VERSION";
 
       cd docker && tar -cvf v$VERSION.tar.gz ../ && cd ..;
-      docker build --build-arg RELEASE_PATH="." --build-arg FROM_NAMESPACE=$NAMESPACE --build-arg FROM_VERSION=$FROM_VERSION -t $NAMESPACE/iip-cyto:latest -t $NAMESPACE/iip-cyto:v$VERSION docker/
+      docker build --build-arg RELEASE_PATH="." --build-arg FROM_NAMESPACE=$NAMESPACE --build-arg FROM_VERSION=$FROM_VERSION --build-arg VERSION=$VERSION -t $NAMESPACE/iip-cyto:latest -t $NAMESPACE/iip-cyto:v$VERSION docker/
     fi;
 
 deploy:
